# c-project-planning-ArthurUVT

./: CMakeLists.txt  README.md  app_1  app_1.cpp  app_1.h  app_1_main.cpp  app_2  app_2.cpp  app_2.h  app_2_main.cpp  sports_tracker  sports_tracker.c
PP/: AdvancedTracker.cpp  AdvancedTracker.h  CMakeLists.txt  Color.cpp  Color.h  CoreTracker.cpp  CoreTracker.h  Makefile  README.md  activities_cpp.csv  activities_goals_cpp.csv  activity.cpp  activity.h  app1.md  app2.md  app_1  app_1.cpp  app_2  app_2.cpp  compile_app1.sh  compile_app2.sh  overview.md
cpp_project/: CMakeLists.txt  activities_cpp.csv  activities_cpp_goals.csv  activity.h  main.cpp  sports_tracker_cpp  tracker.cpp  tracker.h
